jerrypoon - Fixed content overflowing from table when table height is set

--- a/flow_screen_components/datatable/force-app/main/default/staticresources/ers_customLightningDatatableStyles.css
+++ b/flow_screen_components/datatable/force-app/main/default/staticresources/ers_customLightningDatatableStyles.css
@@ -72,3 +72,9 @@ c-datatable c-ers_custom-lightning-datatable .dt-outer-container lightning-primi
     opacity: 0.5;
     visibility: hidden;
 }
+.datatable-border {
+    border-left: var(--lwc-borderWidthThin,1px) solid var(--lwc-colorBorder,rgb(229, 229, 229));
+    border-top: var(--lwc-borderWidthThin,1px) solid var(--lwc-colorBorder,rgb(229, 229, 229));
+    border-right: var(--lwc-borderWidthThin,1px) solid var(--lwc-colorBorder,rgb(229, 229, 229));
+    margin: -1px;
+}
